--- a/chat-mvp/vercel.json
+++ b/chat-mvp/vercel.json
@@ -4,5 +4,9 @@
     { "src": "index.html", "use": "@vercel/static" },
     { "src": "style.css", "use": "@vercel/static" },
     { "src": "api/chat.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/api/chat", "dest": "/api/chat.js" }
   ]
 }
